Improved Maven and Bash lang classes